# waterconflict

./: .gitignore  ACLED_ANALYSIS_SUMMARY.md  README.md  VERSIONING.md  config.sample.py  demo_experiment_history.jsonl  requirements.txt  water_conflict_classifier_demo.ipynb
acled/: ACLED_DATA.md
acled/transforms/: README.md  analyze_countries.py  generate_summary.py
classifier/: MANIFEST.in  PUBLISHING.md  README.md  __init__.py  classify_headline.py  classify_headline_hub.py  data_prep.py  evals_upload.py  evaluation.py  model_card.py  publish-update.sh  pyproject.toml  requirements.txt  setup.py  train_on_hf.py  train_setfit_headline_classifier.py  training_logic.py  training_logic_optuna.py  upload_datasets.py  versioning.py
docs/: NATO SPS Proposal - Step 2 of workplan.docx  Step2_AI_Pipeline_Plan.md
scripts/: README.md  classify.py  demo_versioning.py  distill_to_static.py  generate_hard_negatives.py  inference_static.py  migrate_evals_schema.py  model_card.md  prepare_training_dataset.py  train_on_hf.py  train_on_hf_optuna.py  transform_prep_negatives.py  upload_datasets.py  view_evals.py  view_experiments.py
transforms/: README.md  analyze_actors.py  analyze_enums.py  analyze_tags.py  analyze_tags_and_temporal.py  run_all_analysis.py
