[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "water-conflict-classifier"
version = "0.1.20"
description = "SetFit-based multi-label classifier for water-related conflict events"
readme = "README.md"
requires-python = ">=3.10"
license = "CC-BY-NC-4.0"
authors = [
    {name = "Baobab Tech"},
]
keywords = ["water", "conflict", "classifier", "setfit", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "setfit>=1.0.0",
    "sentence-transformers>=2.2.0",
    "datasets>=2.14.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "huggingface-hub>=0.19.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/baobabtech/waterconflict"
Documentation = "https://github.com/baobabtech/waterconflict/blob/main/classifier/README.md"
Repository = "https://github.com/baobabtech/waterconflict"

[tool.setuptools]
py-modules = [
    "data_prep",
    "training_logic", 
    "evaluation",
    "model_card",
    "versioning",
    "evals_upload",
]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"]

